# scrape_reviews

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
scrape_reviews/: __init__.py  cleaning_gmaps.py  scraping_gmaps.py
scrape_reviews.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/scrape_reviews/: __init__.py  categories_of_interest.py  connect_with_elasticsearch.py  connect_with_sqlite_db.py  gmaps_constants.py  gmaps_scraper.py  greek_stopwords.txt  requirements.txt  saving.py  scraping_gmaps.py
src/scrape_reviews.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
