[metadata]
version = 0.4
author=Konstantinos Voulgaropoulos    
author_email = voulkon93@gmail.com    
description = Scrape Online Reviews
name = scrape_reviews
description_file = README.md
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/voulkon/scrape_reviews

project_urls =
    Source Code = https://github.com/voulkon/scrape_reviews

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages=find:
python_requires = >=3.9


[options.packages.find]
where = src